@@ -1,5 +1,6 @@
 pgbconsole (current development) unstable; urgency=low
 
+  * Add pg_stat_user_functions screen.
   * Add ability to change min age interval for pg_stat_activity long queries.
   * Add cmd_readline from pgbconsole.
   * Add pg_stat_activity long queries screen (based on db_activity).
